# epic

./: .clang-format  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CITATION.cff  CMakeLists.txt  Gemfile  LICENSE.spdx  LumiDirectPC_geo.cpp  README.md  RSU_DRAWING_SUMMARY.md  SVT_ENDCAP_CORRUGATED_MODULE_LOG.md  SVT_ENDCAP_CORRUGATED_MODULE_PROJECT.md  SimpleCurved_silicon_barrel.xml  TestOB.C  TestOB.sh  _config.yml  analyze_field_benchmark.py  compile.bash  compile.sh  definitions.xml  detector_geometry.root  directPC.xml  directPC_filter.xml  ecce.xml  eic_ip6.xml  epic_craterlake_tracking_only_cut.xml  epic_pfrich_sl_only.xml  field_benchmark_report.txt  field_performance_summary.json  ip6.xml  ip6_arches.xml  ip6_brycecanyon.xml  log  overlap_log.txt  plot_geo_wGun.sh  requirements.txt  run.sh  simple_field_benchmark.py
.devcontainer/: devcontainer.json
.github/: dependabot.yml  graphical-scan-configs.yml  labeler.yml  lsan.supp  pull_request_template.md  release.yml  valgrind.supp
CAD/: BinaryToASCII.py  FCStd_to_gdml.sh  L3Stave_assembly_no_inactive.FCStd  L4Stave_assembly_no_inactive.FCStd  Readme.txt  Test.FCStd  autogen_svtob_xml.py  convert.sh  create_xml.py  create_xml_old.py  ePIC_Skel_Driven_L4_no_Ancilliary_no_inactive.step  freecadcmd_dir  out.gdml  refine_step_for_ePIC.py  remove_whitespace.sh  stl_gdml.py  svt_ob_meshing.py
_layouts/: geoviewer.html
calibrations/: 01d5c2a7599c2c3f  657d53d737220c61  README.md  ba660f5d445f46d7  calo_digi_default.json  emcal_barrel_calibration.json  ffi_zdc.json
cmake/: git_version.cmake  setup.sh
compact/: calibrations.xml  central_beampipe.xml  central_beampipe_sens.xml  central_tracker.xml  central_tracker_hybrid_v2.xml  colors.xml  definitions.xml  definitions.xml.orig  dirc.xml  display.xml  display_detailed.xml  display_geoviewer.xml  drich.xml  ecal.xml  ecal_backward_PbWO4.xml  ecal_backward_hybrid.xml  ecal_barrel.xml  ecal_barrel_interlayers.xml  ecal_barrel_sciglass.xml  ecal_barrel_sciglass_panda.xml  ecal_barrel_sciglass_tiltless.xml  ecal_forward_homogeneous.xml  ecal_forward_homogenous.xml  ecal_forward_insert_homogeneous.xml  ecal_forward_scfi.xml  elements.xml  fake_dirc.xml  far_backward.xml  far_backward_extended.xml  far_forward.xml  far_forward_brycecanyon.xml  fields.xml  forward_electron_beampipe.xml  forward_trd.xml  gem_tracker_endcap.xml  hcal.xml  hcal_barrel_gdml.xml  hcal_dummy.xml  hcal_gdml.xml  ip6_defs.xml  (+20 more)
configurations/: 10x100.yml  10x275.yml  18x275.yml  5x100.yml  5x41.yml  SVTOB_L3_only.yml  SVTOB_L4_only.yml  SVTOB_only.yml  arches.yml  arches_mrich_gdml.yml  arches_no_barrel_hcal.yml  arches_trks_noTOF.yml  arches_trks_noTOF_matmap.yml  arches_trks_wTOF.yml  arches_trks_wTOF_0percent.yml  arches_trks_wTOF_0percent_matmap.yml  arches_trks_wTOF_1000umEC_2cmBRL.yml  arches_trks_wTOF_200percent.yml  arches_trks_wTOF_200percent_matmap.yml  arches_trks_wTOF_500percent.yml  arches_trks_wTOF_500percent_matmap.yml  arches_trks_wTOF_50percent.yml  arches_trks_wTOF_50percent_matmap.yml  arches_trks_wTOF_700umEC_3cmBRL.yml  arches_trks_wTOF_800um.yml  arches_trks_wTOF_detailed.yml  arches_trks_wTOF_matmap.yml  backward_hcal_10layers_abs4cm_sci24mm_sampF.yml  backward_hcal_10layers_abs4cm_sci24mm_tile5x5cm_sampF.yml  backward_hcal_12layers.yml  backward_hcal_12layers_sampF.yml  backward_hcal_12layers_tile5x5cm.yml  backward_hcal_12layers_tile5x5cm_sampF.yml  backward_hcal_15layers.yml  backward_hcal_15layers_sampF.yml  backward_hcal_15layers_tile5x5cm.yml  backward_hcal_15layers_tile5x5cm_sampF.yml  backward_hcal_20layers_abs2cm_sci12mm_sampF.yml  backward_hcal_20layers_abs2cm_sci12mm_tile5x5cm_sampF.yml  backward_hcal_20layers_abs2cm_sci4mm.yml  (+176 more)
gdml/: 10bd5718fe159f36  20fad6b351871a28  32a29d08772e12b2  3d876e352b160e31  50cd8f8ec2ba14ef  629291b5f6b4631e  6312c5efa5b159e5  6708466c8c4f9643  6fee28df18ca825c  84d15ab541b29649  8ade8a07b7c6ca4f  8b101d58b81d0674  918c7a5501fefc77  9e79f943fbf6c905  CTile09_Reduced.gdml  CTile10_Reduced.gdml  CTile11_Reduced.gdml  CTile12_Reduced.gdml  Tile01_Reduced.gdml  Tile02_Reduced.gdml  Tile03_Reduced.gdml  Tile04_Reduced.gdml  Tile05_Reduced.gdml  Tile06_Reduced.gdml  Tile07_Reduced.gdml  Tile08_Reduced.gdml  Tile09_Reduced.gdml  Tile10_Reduced.gdml  Tile11_Reduced.gdml  Tile12_Reduced.gdml  a483bb0f608aff53  b4652623a91688d9  barrel_hcal_steel_chimneysector_nocombs.gdml  barrel_hcal_steel_endring.gdml  barrel_hcal_steel_sector_nocombs.gdml  cd989a0257bd8421  e311dee479091c58  f8d41e8284a9e430
html/: geoviewer.html
ip6/: .clang-format  .gitlab-ci.yml  B0_preshower.xml  B0_tracker.xml  README.md  beam_orbit_tracker.xml  beampipe.xml  beampipe_hadron_B0.xml  central_beampipe.xml  definitions.xml  far_backward.xml  far_forward.xml  far_forward_ZDC_Ecal.xml  far_forward_ZDC_Ecal_WSciFi.xml  far_forward_ZDC_Hcal.xml  far_forward_brycecanyon.xml  far_forward_detectors.xml  far_forward_fields_100.xml  far_forward_fields_275.xml  far_forward_fields_41.xml  far_forward_offM_tracker.xml  far_forward_romanpots.xml  ffi_offmtrk.xml  fields.xml  forward_ion_beamline.xml  inner_vacuum_FF_magnets.xml  ip6.xml  ip6_arches.xml  ip6_brycecanyon.xml  ip6_colors.xml  ip6_defs.xml  ip6_display.xml  magnets.xml  materials.xml  roman_pots_eRD24_design.xml
lib/: libIP6.components
macro/: b0_vis.mac  dawn_picture.mac  dawn_picture2.mac  dirc_vis.mac  gps.mac  mrich_vis.mac  vis.mac  vis_OGL_along_z_beamOn_1.mac  vis_vertical.mac
python/: README.md  SimpleDisk_python_geo.py  epic_geo_helpers.py
reports/: arches_views.md  artifacts.md  brycecanyon_views.md  craterlake_scans.md  craterlake_views.md  geoviewer.md
scripts/: PlotMaterialScan.py  checkOverlaps.py  convert_fieldmap_to_covfie.cpp  convert_fieldmap_to_covfie.sh  convert_to_gdml.py  create_IRT_auxfile.py  generate_endcap_modules.py  generate_endcap_tiles.py  test_ACTS.cxx  test_ACTS_gen1.cxx  test_ACTS_gen3.cxx  update_beamline_from_survey_and_twiss.py
src/: B0ECal_geo.cpp  B0Preshower_geo.cpp  B0Tracker_geo.cpp  B0Window_geo.cpp  BRICH_geo.cpp  BackwardsBeamPipe_geo.cpp  (+135 more)
(+87508 files in other folders)
